# intent-kit

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT_REFACTOR_TASKS.md  FINAL_LINT_STATUS.md  LINT_FIXES_CHECKLIST.md  LINT_FIXES_SUMMARY.md  NODE_PROMPT_CUSTOMIZATION_IMPLEMENTATION.md  QUICK_FIX_SUMMARY.md  README.md  TASKS.md  comprehensive_lint_fix.py  env.example  fix_critical_syntax.py  fix_lint_automatically.py  fix_lint_errors.py  fix_whitespace.py  intent_graph_config.json  json.patch  mkdocs.yml  pyproject.toml  requirements.txt  test_validation.py
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml  docs.yml  node_eval.yml  pages.yml  test-and-eval.yml
binder/: requirements.txt
docs/: 404.md  REFACTOR_PLAN_BUILDER.md  TASKS.md  TEST_COVERAGE_IMPROVEMENTS.md  api_reference.md  audit_log.md  documentation-management.md  index.md  node_prompt_customization.md  organization-summary.md  quickstart.md  robots.txt  structure.json
docs/api/: api-reference.md  intent_kit.md
docs/concepts/: clarification-nodes.md  context-architecture.md  context-management.md  dag-validation.md  extractor-nodes.md  index.md  intent-graphs.md  nodes-and-actions.md
docs/configuration/: index.md  json-serialization.md  llm-integration.md
docs/development/: building-and-publishing.md  building.md  cost-monitoring.md  debugging.md  documentation-management.md  evaluation-framework.md  evaluation.md  index.md  performance-monitoring.md  testing.md
docs/examples/: basic-examples.md  calculator-bot.md  calculator_bot.md  context-aware-chatbot.md  context-memory-demo.md  dag-examples.md  index.md  json-demo.md  multi-intent-routing.md
docs/services/: ai-services.md
docs/utils/: utilities.md
eval_example/: config.yaml  patterns.yaml  run_eval.py  score.py
examples/: README.md  advanced_remediation_demo.py  audit_log_demo.py  calculator_demo.py  clarifier_example.py  classifier_remediation_demo.py  context_debug_demo.py  context_demo.py  context_demo_with_error.py  context_management_demo.py  context_memory_demo.py  custom_client_demo.py  error_demo.py  error_tracking_demo.py  eval_api_demo.py  json_api_demo.py  json_demo.py  json_llm_demo.py  llm_config_demo.py  multi_intent_demo.py  node_prompt_customization.py  ollama_demo.py  remediation_demo.py  simple_demo.ipynb  simple_demo.py  splitter_demo.py  tree_demo.py  validation_demo.py
examples/advanced/: eval_api_demo.py  json_llm_demo.py
examples/advanced/multi_intent_demo/: multi_intent_demo.json  multi_intent_demo.py  multi_intent_demo_simple.json
examples/api-integration/: custom_client_demo.json  custom_client_demo.py  json_api_demo.json  json_api_demo.py
examples/basic/: llm_config_demo.json  llm_config_demo.py  ollama_demo.json  ollama_demo.py  simple_demo.json  simple_demo.py
examples/context-debugging/: context_debug_demo.json  context_debug_demo.py  context_demo.json  context_demo.py
examples/error-handling/: advanced_remediation_demo.json  advanced_remediation_demo.py  classifier_remediation_demo.json  classifier_remediation_demo.py  error_demo.json  error_demo.py  remediation_demo.json  remediation_demo.py
intent_kit/: __init__.py  builder.py  engine.py  node.py  taxonomy.py  tree.py  types.py
intent_kit/builders/: __init__.py  action.py  base.py  classifier.py  graph.py  splitter.py
intent_kit/classifiers/: TASKS.md  __init__.py  chunk_classifier.py  fuzzy.py  keyword.py  llm_classifier.py  node.py  regex.py
intent_kit/context/: __init__.py  base_context.py  context.py  debug.py  dependencies.py  stack_context.py
intent_kit/core/: __init__.py  dag.py  exceptions.py  traversal.py  types.py  validation.py
intent_kit/evals/: EVALS_UPDATE_SUMMARY.md  __init__.py  llm_config.yaml  run_all_evals.py  run_node_eval.py
intent_kit/evals/datasets/: action_node_llm.yaml  classifier_node_llm.yaml  handler_node_llm.yaml  splitter_node_llm.yaml
intent_kit/evals/sample_nodes/: __init__.py  action_node_llm.py  classifier_node_llm.py  handler_node_llm.py  splitter_node_llm.py
intent_kit/exceptions/: __init__.py
intent_kit/extraction/: __init__.py  base.py  hybrid.py  llm.py  rule_based.py
intent_kit/graph/: __init__.py  aggregation.py  builder.py  graph_components.py  intent_graph.py  registry.py  validation.py
intent_kit/graph/splitters/: __init__.py  llm_splitter.py  rule_splitter.py  splitter_types.py
intent_kit/handlers/: node.py  remediation.py
intent_kit/node/: __init__.py  base.py  enums.py  types.py
intent_kit/node/actions/: __init__.py  action.py  clarifier.py  llm_clarifier.py  (+1 more)
intent_kit/node_library/: action_node_llm.py
intent_kit/nodes/: __init__.py  action.py  base_builder.py  base_node.py  clarification.py  classifier.py  extractor.py  types.py
intent_kit/services/: __init__.py  anthropic_client.py  base_client.py  google_client.py  llm_factory.py  ollama_client.py  openai_client.py  openrouter_client.py  yaml_service.py
intent_kit/splitters/: __init__.py  llm_splitter.py  node.py  rule_splitter.py
intent_kit/strategies/: __init__.py  validators.py
intent_kit/utils/: __init__.py  logger.py  node_factory.py  param_extraction.py  report_utils.py  text_utils.py  type_coercion.py  type_validator.py
node_eval/: run_node_eval.py
node_eval/datasets/: nlu_parser_node.yaml  slot_filler_node.yaml  uppercase_node.yaml
node_eval/sample_nodes/: nlu_parser_node.py  slot_filler_node.py  uppercase_node.py
scripts/: auto_amend.py  build_docs.py  dev_coverage.sh  examples.py  lint.py  manage_docs.py  security.py  typecheck.py
scripts/templates/: page.html
tasks/: TASKS.md  api-roadmap.md  completed-tasks.md  docs-roadmap.md  engine-roadmap.md  instructions.md  testing-roadmap.md
tests/: test_context.py  test_eval_api.py  test_node_prompt_customization.py  test_ollama_client.py  test_remediation.py  test_text_utils.py  test_tree.py
tests/integration/: test_intent_graph_integration.py
tests/intent_kit/: test_builder.py  test_builders_api.py  test_core_types.py  test_exceptions.py
tests/node_eval/: test_nodes.py
(+115 files in other folders)
