[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-kit"
version = "0.1.0"
description = "A Python library for intent classification and handling"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
openai = [
    "anthropic>=0.54.0",
    "google-genai>=0.1.0",
    "openai>=1.0.0",
]
dev = ["python-dotenv>=1.0.0"]

[tool.setuptools]
packages = ["intent_kit"] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "google-genai>=0.1.0",
    "anthropic>=0.54.0",
    "openai>=1.0.0",
]
