[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-kit"
version = "0.1.0"
description = "An open-source Python library for building intent classification and execution systems that work with any AI backend."
authors = [
    {name = "Stephen Collins", email = "stephen@stephencollins.tech"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # No core dependencies - truly universal framework
]

[project.optional-dependencies]
openai = [
    "anthropic>=0.54.0",
    "google-genai>=0.1.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]

[tool.setuptools]
packages = ["intent_kit"] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "coverage>=7.0",
    "pytest-cov>=5.0",
    "google-genai>=0.1.0",
    "anthropic>=0.54.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
]
viz = [
    "networkx>=3.5",
    "pyvis>=0.3.2",
]
