[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "intentkit-py"
version = "0.3.0"
description = "An open-source Python library for building intent classification and execution systems that work with any AI backend."
authors = [
    {name = "Stephen Collins", email = "stephen@stephencollins.tech"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pytest-cov>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/Stephen-Collins-tech/intent-kit"
Documentation = "https://docs.intentkit.io"
Repository = "https://github.com/Stephen-Collins-tech/intent-kit"
"Bug Tracker" = "https://github.com/Stephen-Collins-tech/intent-kit/issues"

[project.optional-dependencies]
all = [
    "anthropic>=0.54.0",
    "google-genai>=0.1.0",
    "networkx>=3.5",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.2",
]
anthropic = [
    "anthropic>=0.54.0",
]
dev = [
    "black[jupyter]>=24.4.2",
    "black>=24.4.2",
    "build>=1.2.1",
    "coverage>=7.0",
    "intentkit-py[all]",
    "ipykernel>=6.0.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.5.17",
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mypy>=1.10.0",
    "pre-commit>=3.6.0",
    "pytest-cov>=5.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml",
    "ruff>=0.4.7",
    "tqdm",
    "twine>=5.1.0",
    "types-networkx>=3.5.0.20250701",
    "types-pyyaml>=6.0.12.20250516",
]
google = [
    "google-genai>=0.1.0",
]
ollama = [
    "ollama>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
viz = [
    "networkx>=3.5",
    "pyvis>=0.3.2",
]
evals = [
    "pyyaml>=6.0.2",
]

[project.scripts]
eval-api-demo = "examples.eval_api_demo:main"
eval-node = "intent_kit.evals.run_node_eval:main"
lint = "scripts.lint:main"
run-evals = "intent_kit.evals.run_all_evals:run_all_evaluations"
typecheck = "scripts.typecheck:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["intent_kit*", "scripts*"]

[tool.uv.sources]
intentkit-py = { workspace = true }

[dependency-groups]
dev = [
    "anthropic>=0.57.1",
    "black>=25.1.0",
    "google-genai>=1.25.0",
    "mypy>=1.16.1",
    "ollama>=0.5.1",
    "openai>=1.95.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.3",
    "types-networkx>=3.5.0.20250712",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["intent_kit"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
